--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <center>
-            <img src="whatdoethetorisay.png" height="800px">
-            <textarea style='position: absolute; top: 385px; left: 530px; z-index: 100;width: 215px; height: 146px; background: transparent; border: 0; outline: none; font-family: "Marker Felt"; font-size: 40px; text-align: center;'>Edit me!</textarea>
+        <div style='height: 600px;'>
+            <img src="whatdoethetorisay.png" width='600px'>
+            <textarea style='position: absolute; top: 515px; left: 190px; z-index: 100;width: 275px; height: 176px; background: transparent; border: 0; outline: none; font-family: "Marker Felt"; font-size: 40px; text-align: center;'>Edit me!</textarea>
         </center>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
